# Postcode-API

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  tests.sh
migrations/2019-07-24-092956_create_states/: up.sql
migrations/2019-07-27-105932_create_addresses/: up.sql
src/: api_tests.rs  data.rs  db.rs  main.rs  models.rs  postcode.rs  schema.rs  state_refresher.rs  tests.rs  utils.rs
src/api/: addresses.rs
src/data/: mod.rs  models.rs
src/data/repo/: addresses.rs  mod.rs  states.rs
src/data/state/: error.rs  mod.rs  state_refresher.rs
