[package]
name = "postcode-service"
version = "0.1.0"
authors = ["Léonard Besson <leonard.besson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0.5"
csv = "1.1.1"
dotenv = "0.14.1"
diesel = "1.4.2"
env_logger = "0.6.2"
log = "0.4.7"
futures = "0.1.28"