[package]
name = "postcode-service"
version = "0.1.0"
authors = ["Léonard Besson <leonard.besson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0.5"
csv = "1.1.1"
dotenv = "0.14.1"
diesel = { version = "1.4.2", features = ["postgres", "uuidv07", "chrono", "r2d2"] }
diesel_migrations = "1.4.0"
env_logger = "0.6.2"
log = "0.4.7"
futures = "0.1.28"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
chrono = "0.4.7"
zip = "0.5.2"
regex = "1.2.0"
serde = "1.0.97"
indicatif = "0.11.0"
r2d2 = "0.8.5"
lazy_static = "1.3.0"